--- a/index.html
+++ b/index.html
@@ -3,26 +3,24 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Mini Pekka Sözlük ⚔️🤖</title>
+<title>Mini Pekka Sözlük ⚔🤖</title>
 
 <style>
-    body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: linear-gradient(#1a1a1a, #333);
-        color: white;
-        padding: 20px;
-    }
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: linear-gradient(#1a1a1a, #333);
+    color: white;
+    padding: 20px;
+}
 
-    /* Mini Pekka ORTA BUTON */
-   /* ✨ Parlayan, animasyonlu Mini Pekka Butonu ✨ */
+/* --- Mini Pekka ORTA BUTON --- */
 #assistantToggle {
     position: fixed;
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
     padding: 10px 28px;
-
     background: linear-gradient(90deg, #005eff, #00b3ff);
     color: white;
     font-weight: bold;
@@ -30,22 +28,18 @@
     border: none;
     border-radius: 30px;
     cursor: pointer;
-
-    /* Glow efekti */
     box-shadow: 0 0 12px #009dff, 0 0 24px #00bfff;
     animation: pekkaGlow 2s infinite alternate ease-in-out;
-
     z-index: 9999;
     transition: 0.2s;
 }
 
-/* Hover animasyonu */
 #assistantToggle:hover {
     transform: translateX(-50%) scale(1.08);
     box-shadow: 0 0 16px #4ecbff, 0 0 40px #36e3ff;
 }
 
-/* ✨ Glow animasyonu */
+/* Glow animasyonu */
 @keyframes pekkaGlow {
     0% {
         box-shadow: 0 0 10px #008cff, 0 0 20px #00aaff;
@@ -55,109 +49,143 @@
     }
 }
 
+/* PANEL */
+#panel {
+    position: fixed;
+    top: 80px;
+    right: 20px;
+    width: 330px;
+    height: 480px;
+    background: #ffffff;
+    border-radius: 14px;
+    color: black;
+    display: none;
+    flex-direction: column;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    overflow: hidden;
+}
 
-   
-    }
+/* MESAJ BÖLMESİ */
+#messages {
+    flex: 1;
+    padding: 12px;
+    overflow-y: auto;
+    background: #f5f5f5;
+}
+
+.msg {
+    padding: 8px 12px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    max-width: 80%;
+    word-break: break-word;
+}
+
+.me {
+    background: #d8ecff;
+    margin-left: auto;
+}
+
+.bot {
+    background: #ffffff;
+    border: 1px solid #ddd;
+}
+
+/* GİRİŞ ALANI */
+#input-area {
+    display: flex;
+    padding: 10px;
+    border-top: 1px solid #ddd;
+    background: white;
+}
+
+#input {
+    flex: 1;
+    padding: 8px;
+    border-radius: 50px;
+    border: 1px solid #ccc;
+}
+
+#send {
+    padding: 8px 14px;
+    margin-left: 6px;
+    border-radius: 50px;
+    border: none;
+    background: #4fa3ff;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+}
 </style>
 
-
-    #pekka-btn {
-        position: fixed;
-        top: 20px;
-        right: 20px;
-        background: #4fa3ff;
-        border: none;
-        padding: 12px 20px;
-        border-radius: 50px;
-        color: white;
-        font-size: 16px;
-        font-weight: bold;
-        cursor: pointer;
-        box-shadow: 0 0 15px rgba(0,0,0,0.4);
-    }
-
-    #panel {
-        position: fixed;
-        top: 80px;
-        right: 20px;
-        width: 330px;
-        height: 480px;
-        background: #fff;
-        border-radius: 14px;
-        color: black;
-        display: none;
-        flex-direction: column;
-        box-shadow: 0 0 20px rgba(0,0,0,0.5);
-    }
-
-    #messages {
-        flex: 1;
-        padding: 10px;
-        overflow-y: auto;
-        background: #f1f1f1;
-    }
-
-    .msg {
-        padding: 8px 12px;
-        margin-bottom: 10px;
-        border-radius: 10px;
-        max-width: 80%;
-        white-space: pre-wrap;
-        word-break: break-word;
-        font-size: 14px;
-    }
-    .me { background: #d8ecff; margin-left: auto; }
-    .bot { background: #fff; border: 1px solid #ddd; }
-
-    #input-area {
-        display: flex;
-        padding: 10px;
-        border-top: 1px solid #ddd;
-        background: #fafafa;
-    }
-
-    #input {
-        flex: 1;
-        padding: 8px;
-        border-radius: 50px;
-        border: 1px solid #ccc;
-        font-size: 14px;
-    }
-
-    #send {
-        padding: 8px 14px;
-        margin-left: 6px;
-        border-radius: 50px;
-        border: none;
-        background: #4fa3ff;
-        color: white;
-        font-weight: bold;
-        cursor: pointer;
-    }
-</style>
 </head>
+
 <body>
 
-<h1>Mini Pekka Sözlük ⚔️🤖</h1>
+<h1>Mini Pekka Sözlük ⚔🤖</h1>
 <p>Sağ üstteki <b>Mini Pekka</b> düğmesine basarak asistanı açabilirsin.</p>
 
-<button id="pekka-btn">Mini Pekka</button>
+<!-- ORTA BUTON -->
+<button id="assistantToggle">Mini Pekka</button>
 
+<!-- PANEL -->
 <div id="panel">
     <div id="messages"></div>
+
     <div id="input-area">
         <input id="input" type="text" placeholder="Bir şey yaz..." />
         <button id="send">Gönder</button>
     </div>
 </div>
 
-<audio id="pancake-sound" src="mini-pekka.mp3"></audio>
+<script>
+// PANEL AÇ KAPA
+const toggle = document.getElementById("assistantToggle");
+const panel  = document.getElementById("panel");
 
-<script src="mini.js"></script>
+toggle.addEventListener("click", () => {
+    panel.style.display = panel.style.display === "flex" ? "none" : "flex";
+});
+
+// MESAJ GÖNDERME
+const input = document.getElementById("input");
+const send = document.getElementById("send");
+const messages = document.getElementById("messages");
+
+function addMessage(text, cls) {
+    const div = document.createElement("div");
+    div.classList.add("msg", cls);
+    div.textContent = text;
+    messages.appendChild(div);
+    messages.scrollTop = messages.scrollHeight;
+}
+
+send.addEventListener("click", () => {
+    const text = input.value.trim();
+    if (text === "") return;
+
+    addMessage(text, "me");
+    input.value = "";
+
+    // Mini Pekka cevapları
+    setTimeout(() => {
+        let reply = "";
+
+        if (text.toLowerCase() === "pancakes") {
+            reply = "🥞 Mini Pekka güç modunu açtı!";
+        } 
+        else if (text.toLowerCase() === "busy") {
+            reply = `"busy" = meşgul`;
+        }
+        else {
+            reply = "Mini Pekka bunu anlayamadı ama öğrenmeye devam ediyor! ⚡";
+        }
+
+        addMessage(reply, "bot");
+        new Audio("mini-pekka.mp3").play();
+    }, 300);
+});
+</script>
 
 </body>
 </html>
-
-
-
-
