--- a/index.html
+++ b/index.html
@@ -3,189 +3,147 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Mini Pekka Sözlük ⚔🤖</title>
+<title>Mini Pekka Sözlük ⚔️🤖</title>
 
 <style>
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(#1a1a1a, #333);
-    color: white;
-    padding: 20px;
-}
-
-/* --- Mini Pekka ORTA BUTON --- */
-#assistantToggle {
-    position: fixed;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 10px 28px;
-    background: linear-gradient(90deg, #005eff, #00b3ff);
-    color: white;
-    font-weight: bold;
-    font-size: 15px;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    box-shadow: 0 0 12px #009dff, 0 0 24px #00bfff;
-    animation: pekkaGlow 2s infinite alternate ease-in-out;
-    z-index: 9999;
-    transition: 0.2s;
-}
-
-#assistantToggle:hover {
-    transform: translateX(-50%) scale(1.08);
-    box-shadow: 0 0 16px #4ecbff, 0 0 40px #36e3ff;
-}
-
-/* Glow animasyonu */
-@keyframes pekkaGlow {
-    0% {
-        box-shadow: 0 0 10px #008cff, 0 0 20px #00aaff;
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background: linear-gradient(#1a1a1a, #333);
+        color: white;
+        padding: 20px;
+        text-align: center;
     }
-    100% {
-        box-shadow: 0 0 20px #3bd3ff, 0 0 45px #58f1ff;
+
+    /* ÜSTTE PARLAYAN MINI PEKKA BUTONU */
+    #assistantToggle {
+        position: fixed;
+        top: 25px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #007bff;
+        color: white;
+        border: none;
+        padding: 12px 28px;
+        border-radius: 50px;
+        font-size: 18px;
+        cursor: pointer;
+        font-weight: bold;
+        z-index: 9999;
+
+        /* Glow efekti */
+        box-shadow: 0 0 12px #009dff, 0 0 24px #00bfff;
+        animation: pekkaGlow 2s infinite alternate ease-in-out;
+        transition: 0.2s;
     }
-}
 
-/* PANEL */
-#panel {
-    position: fixed;
-    top: 80px;
-    right: 20px;
-    width: 330px;
-    height: 480px;
-    background: #ffffff;
-    border-radius: 14px;
-    color: black;
-    display: none;
-    flex-direction: column;
-    box-shadow: 0 0 20px rgba(0,0,0,0.3);
-    overflow: hidden;
-}
+    /* Hover animasyonu */
+    #assistantToggle:hover {
+        background-color: #005fcc;
+        transform: translateX(-50%) scale(1.05);
+        box-shadow: 0 0 20px #4ecbff, 0 0 40px #36e3ff;
+    }
 
-/* MESAJ BÖLMESİ */
-#messages {
-    flex: 1;
-    padding: 12px;
-    overflow-y: auto;
-    background: #f5f5f5;
-}
+    /* Glow animasyonu */
+    @keyframes pekkaGlow {
+        0% {
+            box-shadow: 0 0 10px #008cff, 0 0 20px #00aaff;
+        }
+        100% {
+            box-shadow: 0 0 20px #3bd3ff, 0 0 45px #58f1ff;
+        }
+    }
 
-.msg {
-    padding: 8px 12px;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    max-width: 80%;
-    word-break: break-word;
-}
+    /* ORTADA SOHBET PANELİ */
+    #panel {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 340px;
+        height: 480px;
+        background: #ffffff;
+        border-radius: 14px;
+        color: black;
+        display: none; /* başlangıçta kapalı */
+        flex-direction: column;
+        box-shadow: 0 0 20px rgba(0,0,0,0.3);
+        z-index: 9998;
+        padding: 0;
+        overflow: hidden;
+    }
 
-.me {
-    background: #d8ecff;
-    margin-left: auto;
-}
+    #messages {
+        flex: 1;
+        padding: 10px;
+        overflow-y: auto;
+        background: #f1f1f1;
+    }
 
-.bot {
-    background: #ffffff;
-    border: 1px solid #ddd;
-}
+    .msg {
+        padding: 8px 12px;
+        margin-bottom: 10px;
+        border-radius: 10px;
+        max-width: 80%;
+        word-wrap: break-word;
+        font-size: 14px;
+    }
 
-/* GİRİŞ ALANI */
-#input-area {
-    display: flex;
-    padding: 10px;
-    border-top: 1px solid #ddd;
-    background: white;
-}
+    .me {
+        background: #d8ecff;
+        margin-left: auto;
+    }
 
-#input {
-    flex: 1;
-    padding: 8px;
-    border-radius: 50px;
-    border: 1px solid #ccc;
-}
+    .bot {
+        background: #fff;
+        border: 1px solid #ddd;
+    }
 
-#send {
-    padding: 8px 14px;
-    margin-left: 6px;
-    border-radius: 50px;
-    border: none;
-    background: #4fa3ff;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-}
+    #input-area {
+        display: flex;
+        padding: 10px;
+        border-top: 1px solid #ddd;
+    }
+
+    #input {
+        flex: 1;
+        padding: 8px;
+        border-radius: 50px;
+        border: 1px solid #ccc;
+        font-size: 14px;
+    }
+
+    #send {
+        padding: 8px 14px;
+        margin-left: 6px;
+        border-radius: 50px;
+        border: none;
+        background: #4fa3ff;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+    }
 </style>
-
 </head>
 
 <body>
 
-<h1>Mini Pekka Sözlük ⚔🤖</h1>
-<p>Sağ üstteki <b>Mini Pekka</b> düğmesine basarak asistanı açabilirsin.</p>
+<h1>Mini Pekka Sözlük ⚔️🤖</h1>
+<p>Üstteki <b>Mini Pekka</b> düğmesine basarak asistanı açabilirsin.</p>
 
-<!-- ORTA BUTON -->
+<!-- ÜSTTE PARLAYAN BUTON -->
 <button id="assistantToggle">Mini Pekka</button>
 
-<!-- PANEL -->
+<!-- ORTADAKİ SOHBET PANELİ -->
 <div id="panel">
     <div id="messages"></div>
-
     <div id="input-area">
         <input id="input" type="text" placeholder="Bir şey yaz..." />
         <button id="send">Gönder</button>
     </div>
 </div>
 
-<script>
-// PANEL AÇ KAPA
-const toggle = document.getElementById("assistantToggle");
-const panel  = document.getElementById("panel");
-
-toggle.addEventListener("click", () => {
-    panel.style.display = panel.style.display === "flex" ? "none" : "flex";
-});
-
-// MESAJ GÖNDERME
-const input = document.getElementById("input");
-const send = document.getElementById("send");
-const messages = document.getElementById("messages");
-
-function addMessage(text, cls) {
-    const div = document.createElement("div");
-    div.classList.add("msg", cls);
-    div.textContent = text;
-    messages.appendChild(div);
-    messages.scrollTop = messages.scrollHeight;
-}
-
-send.addEventListener("click", () => {
-    const text = input.value.trim();
-    if (text === "") return;
-
-    addMessage(text, "me");
-    input.value = "";
-
-    // Mini Pekka cevapları
-    setTimeout(() => {
-        let reply = "";
-
-        if (text.toLowerCase() === "pancakes") {
-            reply = "🥞 Mini Pekka güç modunu açtı!";
-        } 
-        else if (text.toLowerCase() === "busy") {
-            reply = `"busy" = meşgul`;
-        }
-        else {
-            reply = "Mini Pekka bunu anlayamadı ama öğrenmeye devam ediyor! ⚡";
-        }
-
-        addMessage(reply, "bot");
-        new Audio("mini-pekka.mp3").play();
-    }, 300);
-});
-</script>
+<script src="mini.js"></script>
 
 </body>
 </html>
