--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
         background: linear-gradient(#1a1a1a, #333);
         color: white;
         padding: 20px;
-        text-align: center;
+        /* yazılar solda kalsın */
+        text-align: left;
+    }
+
+    h1 {
+        margin-top: 80px; /* butonla çakışmasın diye biraz aşağıya itiyoruz */
     }
 
     /* ÜSTTE PARLAYAN MINI PEKKA BUTONU */
     #assistantToggle {
         position: fixed;
-        top: 25px;
+        top: 20px;
         left: 50%;
         transform: translateX(-50%);
         background-color: #007bff;
@@ -37,14 +42,12 @@
         transition: 0.2s;
     }
 
-    /* Hover animasyonu */
     #assistantToggle:hover {
         background-color: #005fcc;
         transform: translateX(-50%) scale(1.05);
         box-shadow: 0 0 20px #4ecbff, 0 0 40px #36e3ff;
     }
 
-    /* Glow animasyonu */
     @keyframes pekkaGlow {
         0% {
             box-shadow: 0 0 10px #008cff, 0 0 20px #00aaff;
@@ -54,7 +57,7 @@
         }
     }
 
-    /* ORTADA SOHBET PANELİ */
+    /* ORTADAKİ SOHBET PANELİ */
     #panel {
         position: fixed;
         top: 50%;
@@ -69,7 +72,6 @@
         flex-direction: column;
         box-shadow: 0 0 20px rgba(0,0,0,0.3);
         z-index: 9998;
-        padding: 0;
         overflow: hidden;
     }
 
@@ -103,6 +105,7 @@
         display: flex;
         padding: 10px;
         border-top: 1px solid #ddd;
+        background: white;
     }
 
     #input {
@@ -143,7 +146,65 @@
     </div>
 </div>
 
-<script src="mini.js"></script>
+<script>
+    // Elementleri yakala
+    const toggle   = document.getElementById("assistantToggle");
+    const panel    = document.getElementById("panel");
+    const input    = document.getElementById("input");
+    const sendBtn  = document.getElementById("send");
+    const messages = document.getElementById("messages");
+
+    // Panel aç/kapa
+    toggle.addEventListener("click", () => {
+        const isOpen = panel.style.display === "flex";
+        panel.style.display = isOpen ? "none" : "flex";
+    });
+
+    function addMessage(text, who) {
+        const div = document.createElement("div");
+        div.classList.add("msg");
+        if (who === "me") div.classList.add("me");
+        if (who === "bot") div.classList.add("bot");
+        div.textContent = text;
+        messages.appendChild(div);
+        messages.scrollTop = messages.scrollHeight;
+    }
+
+    function answer(text) {
+        const lower = text.toLowerCase().trim();
+        let reply = "";
+
+        if (lower === "pancakes") {
+            reply = "🥞 Mini Pekka güç modunu açtı!";
+        } else if (lower === "busy") {
+            reply = "\"busy\" = meşgul";
+        } else {
+            reply = "Mini Pekka bunu anlayamadı ama öğrenmeye devam ediyor! ⚡";
+        }
+
+        addMessage(reply, "bot");
+
+        // ses çal (repo kökünde mini-pekka.mp3 olmalı)
+        try {
+            new Audio("mini-pekka.mp3").play();
+        } catch (e) {
+            console.log("Ses çalınamadı:", e);
+        }
+    }
+
+    function send() {
+        const text = input.value.trim();
+        if (!text) return;
+        addMessage(text, "me");
+        input.value = "";
+        setTimeout(() => answer(text), 300);
+    }
+
+    sendBtn.addEventListener("click", send);
+    input.addEventListener("keydown", (e) => {
+        if (e.key === "Enter") send();
+    });
+</script>
 
 </body>
 </html>
