--- a/index.html
+++ b/index.html
@@ -1,327 +1,163 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Deneme Site - Mini Pekka Ayar Testi</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mini Pekka</title>
 
-  <style>
+<style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(#1f1f1f, #3b3b3b);
-      color: #f5f5f5;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background: linear-gradient(#1a1a1a, #333);
+        color: white;
     }
 
-    .container {
-      padding: 24px;
-      max-width: 900px;
+    /* ÜST BAR */
+    .top-bar {
+        display: flex;
+        justify-content: space-between;
+        padding: 20px;
     }
 
-    h1 {
-      margin-top: 0;
-      font-size: 32px;
+    /* Sol üst kutu */
+    #textBox {
+        border: 3px solid white;
+        padding: 10px 15px;
+        min-width: 120px;
+        text-align: center;
+        font-size: 14px;
+        background: rgba(255,255,255,0.1);
     }
 
-    p {
-      font-size: 16px;
-      line-height: 1.5;
+    /* Sağ üst buton */
+    #miniPekkaBtn {
+        padding: 12px 25px;
+        font-size: 16px;
+        border-radius: 10px;
+        border: none;
+        background: #0084ff;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+        box-shadow: 0 0 12px #0084ff;
     }
 
-    #extra-area {
-      margin-top: 20px;
-      padding: 16px;
-      border-radius: 10px;
-      background: rgba(0,0,0,0.25);
-      border: 1px solid rgba(255,255,255,0.1);
-      min-height: 40px;
+    #miniPekkaBtn:hover {
+        background: #0a95ff;
+        transform: scale(1.02);
     }
 
-    #extraButton {
-      margin-top: 16px;
-      padding: 8px 16px;
-      border-radius: 20px;
-      border: none;
-      cursor: pointer;
-      background: #ffb703;
-      color: #222;
-      font-weight: bold;
+    /* ORTA MESAJ PANELİ */
+    .center-area {
+        display: flex;
+        justify-content: center;
+        margin-top: 40px;
     }
 
-    /* Sol alttaki AYARLAR butonu */
-    #settingsToggle {
-      position: fixed;
-      left: 16px;
-      bottom: 16px;
-      padding: 10px 18px;
-      border-radius: 999px;
-      border: none;
-      background: #ff8800;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 0 10px rgba(0,0,0,0.4);
-      z-index: 9999;
+    #chatBox {
+        width: 70%;
+        height: 450px;
+        border: 4px solid white;
+        background: #fafafa;
+        color: black;
+        border-radius: 4px;
+        display: none;
+        flex-direction: column;
     }
 
-    #settingsToggle:hover {
-      background: #ff9900;
-      transform: translateY(-1px);
+    #messages {
+        flex: 1;
+        padding: 10px;
+        overflow-y: auto;
     }
 
-    /* Ayar paneli */
-    #settingsPanel {
-      position: fixed;
-      left: 16px;
-      bottom: 64px;
-      width: 260px;
-      background: #ffffff;
-      color: #222;
-      border-radius: 12px;
-      box-shadow: 0 0 14px rgba(0,0,0,0.5);
-      padding: 12px;
-      display: none;
-      z-index: 9998;
-      font-size: 13px;
+    .msg {
+        padding: 8px 12px;
+        background: #dedede;
+        margin-bottom: 10px;
+        border-radius: 8px;
+        max-width: 70%;
     }
 
-    #settingsPanel h3 {
-      margin: 0 0 8px 0;
-      font-size: 15px;
+    .me {
+        background: #b8e6ff;
+        margin-left: auto;
     }
 
-    #settingsPanel label {
-      font-weight: bold;
-      font-size: 12px;
-      display: block;
-      margin-top: 8px;
-      margin-bottom: 2px;
+    #bottomInput {
+        display: flex;
+        padding: 10px;
+        border-top: 1px solid #ccc;
     }
 
-    #settingsPanel input[type="text"],
-    #settingsPanel textarea {
-      width: 100%;
-      box-sizing: border-box;
-      font-size: 12px;
-      padding: 5px 6px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      resize: vertical;
+    #userInput {
+        flex: 1;
+        padding: 8px;
+        border-radius: 5px;
+        border: 1px solid #aaa;
     }
 
-    #settingsPanel textarea {
-      min-height: 50px;
+    #sendBtn {
+        margin-left: 10px;
+        padding: 8px 15px;
+        border: none;
+        border-radius: 6px;
+        background: #0084ff;
+        color: white;
+        cursor: pointer;
     }
 
-    #settingsPanel .btn-row {
-      display: flex;
-      gap: 6px;
-      margin-top: 10px;
-      flex-wrap: wrap;
-    }
-
-    #settingsPanel button.small {
-      flex: 1;
-      padding: 6px 4px;
-      font-size: 11px;
-      border-radius: 999px;
-      border: none;
-      cursor: pointer;
-    }
-
-    #settingsPanel button.apply {
-      background: #0077ff;
-      color: white;
-    }
-
-    #settingsPanel button.reset {
-      background: #eeeeee;
-      color: #222;
-    }
-
-    #settingsPanel button.close {
-      background: #ff4444;
-      color: white;
-    }
-
-    #settingsPanel button.toggle-extra-btn {
-      background: #00b894;
-      color: white;
-      width: 100%;
-      margin-top: 6px;
-    }
-
-    #settings-info {
-      font-size: 11px;
-      margin-top: 6px;
-      color: #666;
-    }
-  </style>
+</style>
 </head>
 
 <body>
 
-  <div class="container">
-    <h1 id="mainTitle">Deneme Başlığı</h1>
-    <p id="mainText">
-      Burası deneme sitemiz. Bu sayfada tasarımla oynayıp, sonra ana siteye uygulayacağız.
-      Sol altta bulunan <b>Ayarlar</b> butonuna tıklayıp şifreyi girdikten sonra
-      bu yazıyı ve başlığı değiştirebilirsin.
-    </p>
+<!-- ÜST BAR -->
+<div class="top-bar">
+    <div id="textBox">yazı buraya</div>
 
-    <div id="extra-area">
-      Buraya ekstra notlar, kutucuklar veya deneme yazıları ekleyebilirsin.
+    <button id="miniPekkaBtn">Mini Pekka</button>
+</div>
+
+<!-- ORTA PANEL -->
+<div class="center-area">
+    <div id="chatBox">
+
+        <div id="messages"></div>
+
+        <div id="bottomInput">
+            <input type="text" id="userInput" placeholder="Bir şey yaz...">
+            <button id="sendBtn">Gönder</button>
+        </div>
+
     </div>
+</div>
 
-    <!-- Ekstra buton (başta gizli) -->
-    <button id="extraButton" style="display:none;">Ekstra Buton</button>
-  </div>
+<script>
+    const toggleBtn = document.getElementById("miniPekkaBtn");
+    const chatBox = document.getElementById("chatBox");
+    const sendBtn = document.getElementById("sendBtn");
+    const messages = document.getElementById("messages");
+    const input = document.getElementById("userInput");
 
-  <!-- Sol alttaki AYARLAR butonu -->
-  <button id="settingsToggle">⚙ Ayarlar</button>
+    toggleBtn.onclick = () => {
+        chatBox.style.display = chatBox.style.display === "flex" ? "none" : "flex";
+    };
 
-  <!-- AYAR PANELİ -->
-  <div id="settingsPanel">
-    <h3>Tasarım Ayarları</h3>
-    <div id="settings-info">🔒 Ayarları değiştirmek için şifre: <b>pancakes!</b></div>
+    sendBtn.onclick = () => {
+        const text = input.value.trim();
+        if (!text) return;
 
-    <label for="titleInput">Başlık</label>
-    <input type="text" id="titleInput" placeholder="Yeni başlık yaz..." />
+        let div = document.createElement("div");
+        div.className = "msg me";
+        div.textContent = text;
+        messages.appendChild(div);
 
-    <label for="textInput">Ana Yazı</label>
-    <textarea id="textInput" placeholder="Ana yazıyı buradan değiştirebilirsin."></textarea>
+        input.value = "";
+        messages.scrollTop = messages.scrollHeight;
+    };
+</script>
 
-    <label for="extraInput">Ekstra Bölge (alt kutu)</label>
-    <textarea id="extraInput" placeholder="Ekstra yazıları buraya yaz. Boş bırakırsan silinir."></textarea>
-
-    <label for="extraBtnText">Ekstra Buton Yazısı</label>
-    <input type="text" id="extraBtnText" placeholder="Örn: Tıkla Bakalım" />
-
-    <button class="small toggle-extra-btn" id="toggleExtraBtn">Ekstra Butonu Aç / Kapat</button>
-
-    <div class="btn-row">
-      <button class="small apply" id="applyChanges">Uygula</button>
-      <button class="small reset" id="resetDefaults">Sıfırla</button>
-      <button class="small close" id="closeSettings">Kapat</button>
-    </div>
-  </div>
-
-  <script>
-    const settingsToggle = document.getElementById("settingsToggle");
-    const settingsPanel  = document.getElementById("settingsPanel");
-    const mainTitle      = document.getElementById("mainTitle");
-    const mainText       = document.getElementById("mainText");
-    const extraArea      = document.getElementById("extra-area");
-    const extraButton    = document.getElementById("extraButton");
-
-    const titleInput     = document.getElementById("titleInput");
-    const textInput      = document.getElementById("textInput");
-    const extraInput     = document.getElementById("extraInput");
-    const extraBtnText   = document.getElementById("extraBtnText");
-    const applyBtn       = document.getElementById("applyChanges");
-    const resetBtn       = document.getElementById("resetDefaults");
-    const closeBtn       = document.getElementById("closeSettings");
-    const toggleExtraBtn = document.getElementById("toggleExtraBtn");
-
-    let isUnlocked = false;
-
-    // Varsayılan metinleri saklayalım (reset için)
-    const defaultTitle = mainTitle.textContent;
-    const defaultText  = mainText.textContent.trim();
-    const defaultExtra = extraArea.innerHTML;
-
-    // Ayar butonuna tıklayınca
-    settingsToggle.addEventListener("click", () => {
-      if (!isUnlocked) {
-        const pwd = prompt("Ayarlar için şifreyi gir (ipucu: pancakes!)");
-        if (pwd === "pancakes!") {
-          isUnlocked = true;
-          alert("Ayarlar açıldı! 🎉");
-          // Mevcut değerleri inputlara doldur
-          titleInput.value   = mainTitle.textContent;
-          textInput.value    = mainText.textContent.trim();
-          extraInput.value   = extraArea.innerHTML.trim();
-          extraBtnText.value = extraButton.style.display === "none" ? "" : extraButton.textContent;
-        } else {
-          alert("Yanlış şifre!");
-          return;
-        }
-      }
-
-      // Şifre doğruysa paneli aç/kapa
-      settingsPanel.style.display =
-        settingsPanel.style.display === "none" || settingsPanel.style.display === ""
-          ? "block"
-          : "none";
-    });
-
-    // Uygula butonu
-    applyBtn.addEventListener("click", () => {
-      if (!isUnlocked) return;
-
-      // Başlık
-      if (titleInput.value.trim() !== "") {
-        mainTitle.textContent = titleInput.value.trim();
-      }
-
-      // Ana yazı
-      if (textInput.value.trim() !== "") {
-        mainText.textContent = textInput.value.trim();
-      }
-
-      // Ekstra alan (boşsa temizle)
-      if (extraInput.value.trim() === "") {
-        extraArea.innerHTML = "";
-      } else {
-        extraArea.innerHTML = extraInput.value;
-      }
-
-      // Ekstra buton yazısı (buton açıksa uygula)
-      if (extraButton.style.display !== "none" && extraBtnText.value.trim() !== "") {
-        extraButton.textContent = extraBtnText.value.trim();
-      }
-
-      alert("Değişiklikler uygulandı ✅");
-    });
-
-    // Sıfırla butonu
-    resetBtn.addEventListener("click", () => {
-      if (!isUnlocked) return;
-
-      mainTitle.textContent   = defaultTitle;
-      mainText.textContent    = defaultText;
-      extraArea.innerHTML     = defaultExtra;
-      extraButton.style.display = "none";
-      extraButton.textContent = "Ekstra Buton";
-
-      titleInput.value   = defaultTitle;
-      textInput.value    = defaultText;
-      extraInput.value   = defaultExtra;
-      extraBtnText.value = "";
-
-      alert("Varsayılan ayarlara dönüldü 🔁");
-    });
-
-    // Panel kapat
-    closeBtn.addEventListener("click", () => {
-      settingsPanel.style.display = "none";
-    });
-
-    // Ekstra butonu aç/kapat
-    toggleExtraBtn.addEventListener("click", () => {
-      if (!isUnlocked) return;
-      if (extraButton.style.display === "none" || extraButton.style.display === "") {
-        extraButton.style.display = "inline-block";
-        if (extraBtnText.value.trim() !== "") {
-          extraButton.textContent = extraBtnText.value.trim();
-        }
-      } else {
-        extraButton.style.display = "none";
-      }
-    });
-  </script>
 </body>
 </html>
