--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <!-- ÜST BAR -->
 <div class="top-bar">
-    <div id="textBox">yazı buraya</div>
+    <div id="textBox">soru sormak için mini pekka ya tıkla</div>
 
     <button id="miniPekkaBtn">Mini Pekka</button>
 </div>
@@ -161,3 +161,4 @@
 
 </body>
 </html>
+
