--- a/index.html
+++ b/index.html
@@ -13,24 +13,20 @@
         color: white;
     }
 
-    /* ÜST BAR */
     .top-bar {
         display: flex;
         justify-content: space-between;
         padding: 20px;
     }
 
-    /* Sol üst kutu */
     #textBox {
         border: 3px solid white;
         padding: 10px 15px;
-        min-width: 120px;
-        text-align: center;
-        font-size: 14px;
         background: rgba(255,255,255,0.1);
+        min-width: 200px;
+        text-align: center;
     }
 
-    /* Sağ üst buton */
     #miniPekkaBtn {
         padding: 12px 25px;
         font-size: 16px;
@@ -43,12 +39,6 @@
         box-shadow: 0 0 12px #0084ff;
     }
 
-    #miniPekkaBtn:hover {
-        background: #0a95ff;
-        transform: scale(1.02);
-    }
-
-    /* ORTA MESAJ PANELİ */
     .center-area {
         display: flex;
         justify-content: center;
@@ -61,7 +51,6 @@
         border: 4px solid white;
         background: #fafafa;
         color: black;
-        border-radius: 4px;
         display: none;
         flex-direction: column;
     }
@@ -107,58 +96,84 @@
         color: white;
         cursor: pointer;
     }
-
 </style>
 </head>
 
 <body>
 
-<!-- ÜST BAR -->
 <div class="top-bar">
-    <div id="textBox">soru sormak için mini pekka ya tıkla</div>
-
+    <div id="textBox">Konuşmak için Mini Pekka’ya tıkla ⚔️</div>
     <button id="miniPekkaBtn">Mini Pekka</button>
 </div>
 
-<!-- ORTA PANEL -->
 <div class="center-area">
     <div id="chatBox">
-
         <div id="messages"></div>
 
         <div id="bottomInput">
             <input type="text" id="userInput" placeholder="Bir şey yaz...">
             <button id="sendBtn">Gönder</button>
         </div>
-
     </div>
 </div>
 
 <script>
-    const toggleBtn = document.getElementById("miniPekkaBtn");
-    const chatBox = document.getElementById("chatBox");
-    const sendBtn = document.getElementById("sendBtn");
-    const messages = document.getElementById("messages");
-    const input = document.getElementById("userInput");
+const toggleBtn = document.getElementById("miniPekkaBtn");
+const chatBox = document.getElementById("chatBox");
+const sendBtn = document.getElementById("sendBtn");
+const messages = document.getElementById("messages");
+const input = document.getElementById("userInput");
 
-    toggleBtn.onclick = () => {
-        chatBox.style.display = chatBox.style.display === "flex" ? "none" : "flex";
-    };
+toggleBtn.onclick = () => {
+    chatBox.style.display = chatBox.style.display === "flex" ? "none" : "flex";
+};
 
-    sendBtn.onclick = () => {
-        const text = input.value.trim();
-        if (!text) return;
+sendBtn.onclick = sendMessage;
+input.addEventListener("keydown", e => { if (e.key === "Enter") sendMessage(); });
 
-        let div = document.createElement("div");
-        div.className = "msg me";
-        div.textContent = text;
-        messages.appendChild(div);
+function addMessage(text, me=false) {
+    let div = document.createElement("div");
+    div.className = "msg" + (me ? " me" : "");
+    div.textContent = text;
+    messages.appendChild(div);
+    messages.scrollTop = messages.scrollHeight;
+}
 
-        input.value = "";
-        messages.scrollTop = messages.scrollHeight;
-    };
+// ⭐ DEEPSEEK API BAĞLANTISI ⭐
+async function sendMessage() {
+    const text = input.value.trim();
+    if (!text) return;
+
+    addMessage(text, true);
+    input.value = "";
+
+    addMessage("Mini Pekka düşünüyor... ⚔️");
+
+    const apiKey = "sk-de7942285d4740f49fa531e78f3299e6"; // 🔥 BURAYA KEY’İ YAZ 🔥
+
+    const response = await fetch("https://api.deepseek.com/chat/completions", {
+        method: "POST",
+        headers: {
+            "Content-Type": "application/json",
+            "Authorization": "Bearer " + apiKey
+        },
+        body: JSON.stringify({
+            model: "deepseek-chat",
+            messages: [
+                { role: "system", content: "Mini Pekka gibi konuş. Kısa, komik, güçlü cevaplar ver." },
+                { role: "user", content: text }
+            ]
+        })
+    });
+
+    const data = await response.json();
+
+    document.querySelectorAll(".msg")[document.querySelectorAll(".msg").length - 1].remove();
+
+    const reply = data.choices?.[0]?.message?.content || "Hata oluştu!";
+    addMessage("⚔️ Mini Pekka: " + reply);
+}
 </script>
 
 </body>
 </html>
-
